--- a/13_introducing_automatic_optimization.ipynb
+++ b/13_introducing_automatic_optimization.ipynb
@@ -6,7 +6,7 @@
       "name": "13-introducing-automatic-optimization.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMmY42k/lGa414tSfbm5k05",
+      "authorship_tag": "ABX9TyPGldhNOLNEdXW16znNbQDf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +124,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "414c1097-80e1-4945-8d4a-2b371e10a00d"
+        "outputId": "aa09f982-2ce3-4543-cc15-d1f2d8980c2c"
       },
       "source": [
         "x = Tensor([1, 2, 3, 4, 5])\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5ec26b41-6563-4a58-9e7b-d40946252cf0"
+        "outputId": "6cb862b9-89bd-4ff3-e300-12e622919824"
       },
       "source": [
         "y = x + x\n",
@@ -245,7 +245,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "09bf8233-ff47-4dc8-cd6a-7317b104b23d"
+        "outputId": "b2855754-7274-4fe7-f2c5-b97f8ee591a0"
       },
       "source": [
         "x = Tensor([1, 2, 3, 4, 5])\n",
@@ -272,7 +272,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9f494c8b-0e5e-4752-ea00-50406679eb8c"
+        "outputId": "bf1f44d7-7bce-43e3-ea24-9751dde2cd97"
       },
       "source": [
         "z = x + y\n",
@@ -298,7 +298,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6ef7590b-446a-4257-adea-adb215821c6b"
+        "outputId": "73e6dac4-24ea-46a4-c5b7-0e376501d30f"
       },
       "source": [
         "print(z.backward(Tensor(np.array([1, 1, 1, 1, 1]))))"
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "c29d04dc-6117-49ae-efb3-fe3d598e4a42"
+        "outputId": "7d11bec8-bbc0-4e69-fe4c-d0d4512af5c4"
       },
       "source": [
         "print(x.grad)\n",
@@ -410,7 +410,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8450a09b-755e-424f-bd05-b995ccef109d"
+        "outputId": "d7070663-8ffd-4bf7-e7ba-e4c334fac08d"
       },
       "source": [
         "g.backward(Tensor(np.array([1, 1, 1, 1, 1])))\n",
@@ -487,7 +487,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "795e9de0-df2f-4d80-d220-010173cd6572"
+        "outputId": "15d22fc6-621f-4c48-ecd8-42d4997fa08c"
       },
       "source": [
         "a = Tensor([1, 2, 3, 4, 5])\n",
@@ -635,7 +635,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bc85bf39-dd5e-42ea-a73c-70ae0d7f2b7a"
+        "outputId": "55cdf8a7-e952-49ee-be68-3e6bab680c8b"
       },
       "source": [
         "a = Tensor([1, 2, 3, 4, 5], autograd=True)\n",
@@ -685,7 +685,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 374
         },
-        "outputId": "739adbe4-4926-4f12-e6ed-ca2823ca5a0d"
+        "outputId": "105fe461-59ec-4f25-9268-5b0d8ef243ed"
       },
       "source": [
         "a = Tensor([1, 2, 3, 4, 5], autograd=True)\n",
@@ -849,7 +849,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "cf3afa2a-a9ca-4c54-ea09-73159869549e"
+        "outputId": "10a3275c-2c6e-4f80-c4d3-53caa814aaf7"
       },
       "source": [
         "a = Tensor([1, 2, 3, 4, 5], autograd=True)\n",
@@ -1051,7 +1051,7 @@
         "\n",
         "  def mm(self, x):\n",
         "    if (self.autograd):\n",
-        "      return Tensor(self.data.dot(x), autograd=True, creators=[self, x], creation_op='mm')\n",
+        "      return Tensor(self.data.dot(x.data), autograd=True, creators=[self, x], creation_op='mm')\n",
         "    return Tensor(self.data.dot(x.data))\n",
         "\n",
         "  def __repr__(self):\n",
@@ -1060,7 +1060,7 @@
         "  def __str__(self):\n",
         "    return str(self.data.__str__())"
       ],
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1086,7 +1086,7 @@
         "  [4, 5, 6]                \n",
         "]))"
       ],
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1112,12 +1112,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "07979f6a-9938-4fdf-ff03-5662d4062ece"
+        "outputId": "71cf4846-dbf3-41c9-dca9-d95f11c76a1d"
       },
       "source": [
         "x.sum(0) "
       ],
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1129,7 +1129,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 20
         }
       ]
     },
@@ -1142,12 +1142,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "23f4d2a2-bcc3-4c8e-b5c6-e5f457b0928e"
+        "outputId": "0c5ae730-08b4-49a4-de24-69e89956724d"
       },
       "source": [
         "x.sum(1)"
       ],
-      "execution_count": 23,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,7 +1159,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 21
         }
       ]
     },
@@ -1184,12 +1184,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "3419b4ae-c8bb-4b95-8a1f-1d0ed7afb348"
+        "outputId": "4db680bc-fb41-4ce7-ecbf-4b1005d1fbec"
       },
       "source": [
         "x.expand(dim=0, copies=4)"
       ],
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1211,7 +1211,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 22
         }
       ]
     },
@@ -1236,12 +1236,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "1a4548f5-c1a0-40f6-c038-f9b886789da5"
+        "outputId": "ff6140fb-6143-4acc-c3c1-a75421c24e5c"
       },
       "source": [
         "x.expand(dim=2, copies=4)"
       ],
-      "execution_count": 25,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1259,7 +1259,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 23
         }
       ]
     },
@@ -1282,12 +1282,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "3bde32d4-59e2-4b84-905c-010d851d77d3"
+        "outputId": "ca6391b2-9c6d-4bb3-8bc9-91fba5fb699a"
       },
       "source": [
         "x.expand(dim=1, copies=4)"
       ],
-      "execution_count": 26,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1307,7 +1307,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 24
         }
       ]
     },
@@ -1338,13 +1338,187 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "**You no longer have to write backpropagation logic!**\n",
+        "\n",
+        "Now, when you train a neural network, you don’t have to write any backpropagation logic! \n",
+        "\n",
+        "\n",
+        "As a toy example, here’s a neural network to backprop by hand:"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "cjv8YRqvRGUX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "310247df-f31b-4787-cfed-02cb377c6316"
+      },
+      "source": [
+        "np.random.seed(42)\n",
+        "\n",
+        "data = np.array([\n",
+        "   [0, 0],\n",
+        "   [0, 1],\n",
+        "   [1, 0],\n",
+        "   [1, 1]              \n",
+        "])\n",
+        "target = np.array([\n",
+        "   [0],\n",
+        "   [1],\n",
+        "   [0],\n",
+        "   [1]                \n",
+        "])\n",
+        "\n",
+        "weights_0_1 = np.random.rand(2, 3)\n",
+        "weights_0_2 = np.random.rand(3, 1)\n",
+        "\n",
+        "for i in range(10):\n",
+        "  # Predict\n",
+        "  layer_1 = data.dot(weights_0_1)\n",
+        "  layer_2 = layer_1.dot(weights_0_2)\n",
+        "\n",
+        "  # Compare\n",
+        "  diff = (layer_2 - target)\n",
+        "  sqdiff = (diff * diff)\n",
+        "  loss = sqdiff.sum(0)\n",
+        "\n",
+        "  # Learn; this is the backpropagation piece\n",
+        "  layer_1_grad = diff.dot(weights_0_2.transpose())\n",
+        "  weights_0_2_update = layer_1.transpose().dot(diff)\n",
+        "  weights_0_1_update = data.transpose().dot(layer_1_grad)\n",
+        "\n",
+        "  weights_0_2 -= weights_0_2_update * 0.1\n",
+        "  weights_0_1 -= weights_0_1_update * 0.1\n",
+        "  print(loss[0])"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.4953698041458336\n",
+            "1.3535697560859723\n",
+            "1.0983854696420685\n",
+            "0.9402318232494947\n",
+            "0.8218819800278834\n",
+            "0.7268126358071565\n",
+            "0.6475517024114271\n",
+            "0.5798445170397148\n",
+            "0.5209684792243789\n",
+            "0.46906878966910576\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G8to8oRXSzV1",
+        "colab_type": "text"
+      },
+      "source": [
+        "You have to forward propagate in such a way that layer_1, layer_2, and diff exist as variables, because you need them later. You then have to backpropagate each gradient to its appropriate weight matrix and perform the weight update appropriately."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aZ2h9FzeSkHz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "d568167b-7a5b-464b-e55c-f77e39ee06c6"
+      },
+      "source": [
+        "np.random.seed(42)\n",
+        "\n",
+        "data = Tensor(np.array([\n",
+        "   [0, 0],\n",
+        "   [0, 1],\n",
+        "   [1, 0],\n",
+        "   [1, 1]                     \n",
+        "]), autograd=True)\n",
+        "\n",
+        "target = Tensor(np.array([\n",
+        "   [0],\n",
+        "   [1],\n",
+        "   [0],\n",
+        "   [1]                     \n",
+        "]), autograd=True)\n",
+        "\n",
+        "w = list()\n",
+        "w.append(Tensor(np.random.rand(2, 3), autograd=True))\n",
+        "w.append(Tensor(np.random.rand(3, 1), autograd=True))\n",
+        "\n",
+        "for i in range(10):\n",
+        "  # Predict\n",
+        "  pred = data.mm(w[0]).mm(w[1])\n",
+        "\n",
+        "  # Compare\n",
+        "  loss = ((pred - target) * (pred - target)).sum(0)\n",
+        "\n",
+        "  # Learn; this is the backpropagation piece\n",
+        "  loss.backward(Tensor(np.ones_like(loss.data)))\n",
+        "\n",
+        "  for w_ in w:\n",
+        "    w_.data -= w_.grad.data * 0.1\n",
+        "    w_.grad.data *= 0\n",
+        "  \n",
+        "  print(loss)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1.11374267]\n",
+            "[0.62255894]\n",
+            "[0.3880155]\n",
+            "[0.2383683]\n",
+            "[0.13717701]\n",
+            "[0.07307696]\n",
+            "[0.03598853]\n",
+            "[0.01689497]\n",
+            "[0.00830702]\n",
+            "[0.00459155]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G8DYx0ctVIAj",
+        "colab_type": "text"
+      },
+      "source": [
+        "But with the fancy new autograd system, the code is much simpler. You don’t have to keep around any temporary variables (because the dynamic graph keeps track of them), and you don’t have to implement any backpropagation logic (because the .backward() method handles that). Not only is this more convenient, but you’re less likely to make silly mistakes in the backpropagation code, reducing the likelihood of bugs!\n",
+        "\n",
+        "Notice that I put all the parameters in a list, which I could iterate through when performing the weight update. This is a bit of foreshadowing for the next piece of functionality. When you have an autograd system, stochastic gradient descent becomes trivial to implement (it’s just that for loop at the end). Let’s try making this its own class as well."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hOwPDwN6VgXz",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Adding automatic optimization"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wr_YUZeMUW4v",
         "colab_type": "code",
         "colab": {}
       },
