--- a/13_introducing_automatic_optimization.ipynb
+++ b/13_introducing_automatic_optimization.ipynb
@@ -6,7 +6,7 @@
       "name": "13-introducing-automatic-optimization.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPiuuBppT89y/DX/sGVvNB+",
+      "authorship_tag": "ABX9TyPPBd//gbGea3Kp5QOQalO9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2222,7 +2222,7 @@
         "  # Learn; this is the backpropagation piece\n",
         "  # loss.backward(Tensor(np.ones_like(loss.data)))\n",
         "\n",
-        "  # optimize using SGD using loss\n",
+        "  # optimize using SGD with loss\n",
         "  sgd.optimize(loss=loss)\n",
         "  \n",
         "  print(loss)"
